--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
   </style>
 </head>
 <body>
-  <img src="https://i.ibb.co/5x4h7Rh/profile.png" alt="Foto Profil">
-  <h2>Nama Kamu</h2>
+  <img src="https://ibb.co.com/fz61Q5PK" alt="Foto Profil">
+  <h2>FAMILY GATHERING RM KEMANG</h2>
   <p>Deskripsi singkat atau tagline ✨</p>
 
-  <a class="link" href="https://instagram.com/username" target="_blank">📷 Instagram</a>
+  <a class="link" href="https://instagram.com/username" target="_blank">🎥 MOVIE</a>
   <a class="link" href="https://wa.me/628xxxx" target="_blank">💬 WhatsApp</a>
   <a class="link" href="https://t.me/username" target="_blank">📢 Telegram</a>
   <a class="link" href="https://youtube.com/@username" target="_blank">▶️ YouTube</a>
