--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   </style>
 </head>
 <body>
-  <img src="https://ibb.co.com/fz61Q5PK" alt="Foto Profil">
+  <img src="FAMILY GATHERING RM KEMANG.png" alt="Foto Profil">
   <h2>FAMILY GATHERING RM KEMANG</h2>
   <p>Deskripsi singkat atau tagline ✨</p>
 
