--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
       padding: 40px 20px;
     }
     img {
-      width: 120px;
-      height: 120px;
+      width: 220px;
+      height: 220px;
       border-radius: 50%;
       border: 3px solid #fff;
       margin-bottom: 15px;
@@ -47,7 +47,9 @@
 <body>
   <img src="FAMILY GATHERING RM KEMANG.png" alt="Foto Profil">
   <h2>FAMILY GATHERING RM KEMANG</h2>
-  <p>Deskripsi singkat atau tagline ✨</p>
+  <p>Terimakasih semuanya
+    Telah mensukseskan acara Family Gathering RM Kemang
+    ✨</p>
 
   <a class="link" href="https://instagram.com/username" target="_blank">🎥 MOVIE</a>
   <a class="link" href="https://wa.me/628xxxx" target="_blank">💬 WhatsApp</a>
