--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
     Telah mensukseskan acara Family Gathering RM Kemang
     ✨</p>
 
-  <a class="link" href="https://instagram.com/username" target="_blank">🎥 MOVIE</a>
-  <a class="link" href="https://wa.me/628xxxx" target="_blank">💬 WhatsApp</a>
-  <a class="link" href="https://t.me/username" target="_blank">📢 Telegram</a>
+  <a class="link" href="https://drive.google.com/drive/folders/114kNT3t1nnbmb-fcNGjHbuBG2KzZg50F" target="_blank">🎥 MOVIE</a>
+  <a class="link" href="https://drive.google.com/drive/folders/1xtipNH8S6Iw63Aapu_mRj0g8pgWhL838" target="_blank">📷 FOTO BERSAMA</a>
+  <a class="link" href="https://drive.google.com/drive/folders/19inJ6IwVFsuOt4kWJlmjEBhwzxQBrkZX" target="_blank">📸 DOKUMENTASI FOTO</a>
   <a class="link" href="https://youtube.com/@username" target="_blank">▶️ YouTube</a>
 </body>
 </html>
