--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
   <img src="IMG_4463.jpeg" alt="Foto Profil">
   <h2>FAMILY GATHERING RM KEMANG</h2>
   <p>Terimakasih semuanya
-    Telah mensukseskan acara Family Gathering RM Kemang
+    Telah Men-Sukseskan Acara Family Gathering RM Kemang
     ✨</p>
 
-  <a class="link" href="https://drive.google.com/drive/folders/114kNT3t1nnbmb-fcNGjHbuBG2KzZg50F" target="_blank">🎥 MOVIE</a>
+  <a class="link" href="https://drive.google.com/drive/folders/114kNT3t1nnbmb-fcNGjHbuBG2KzZg50F" target="_blank">🎥 VIDEO JADI</a>
   <a class="link" href="https://drive.google.com/drive/folders/1xtipNH8S6Iw63Aapu_mRj0g8pgWhL838" target="_blank">📷 FOTO BERSAMA</a>
   <a class="link" href="https://drive.google.com/drive/folders/19inJ6IwVFsuOt4kWJlmjEBhwzxQBrkZX" target="_blank">📸 DOKUMENTASI FOTO</a>
-  <a class="link" href="https://drive.google.com/drive/folders/19inJ6IwVFsuOt4kWJlmjEBhwzxQBrkZX" target="_blank">🛸 File Drone</a>
+  <a class="link" href="https://drive.google.com/drive/folders/19inJ6IwVFsuOt4kWJlmjEBhwzxQBrkZX" target="_blank">🛸 FILE DRONE </a>
 </body>
 </html>
