--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
   <a class="link" href="https://drive.google.com/drive/folders/114kNT3t1nnbmb-fcNGjHbuBG2KzZg50F" target="_blank">🎥 VIDEO JADI</a>
   <a class="link" href="https://drive.google.com/drive/folders/1xtipNH8S6Iw63Aapu_mRj0g8pgWhL838" target="_blank">📷 FOTO BERSAMA</a>
   <a class="link" href="https://drive.google.com/drive/folders/19inJ6IwVFsuOt4kWJlmjEBhwzxQBrkZX" target="_blank">📸 DOKUMENTASI FOTO</a>
-  <a class="link" href="https://drive.google.com/drive/folders/19inJ6IwVFsuOt4kWJlmjEBhwzxQBrkZX" target="_blank">🛸 FILE DRONE </a>
+  <a class="link" href="https://drive.google.com/drive/folders/1WZgNFVSUWyQg5yW6SXg0A5C1xg0X0fnF" target="_blank">🛸 FILE DRONE </a>
+  <a class="link" href="https://drive.google.com/drive/folders/1k_YVc9AJTcsAT5Uh_zYRXUBpMXExG9Ho" target="_blank"😭 VIDEO CORE </a>
 </body>
 </html>
