--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
       margin-bottom: 15px;
     }
     h2 {
-      margin: 10px 0;
+      margin: 8px 0;
     }
     p {
-      font-size: 14px;
+      font-size: 10px;
       opacity: 0.8;
     }
     .link {
@@ -49,7 +49,9 @@
   <h2>FAMILY GATHERING RM KEMANG</h2>
   <p>Terimakasih Semuanya
     Telah Men-Sukseskan Acara Family Gathering RM Kemang
-    ✨</p>
+    ✨</p
+   <p>Berikut hasil dokumentasi acara kemarin, jika ingin melihat gambar / video full HD tidak pecah-pecah. Harap di Download dulu ya ! 
+   Terimakasih </p>
 
   <a class="link" href="https://drive.google.com/drive/folders/114kNT3t1nnbmb-fcNGjHbuBG2KzZg50F" target="_blank">🎥 VIDEO JADI</a>
   <a class="link" href="https://drive.google.com/drive/folders/1xtipNH8S6Iw63Aapu_mRj0g8pgWhL838" target="_blank">📷 FOTO BERSAMA</a>
