--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
       font-size: 10px;
       opacity: 0.8;
     }
+    p {
+      font-size: 10px;
+      opacity: 0.8;
+    }
     .link {
       display: block;
       margin: 15px auto;
