--- a/index.html
+++ b/index.html
@@ -27,10 +27,6 @@
       font-size: 10px;
       opacity: 0.8;
     }
-    p {
-      font-size: 10px;
-      opacity: 0.8;
-    }
     .link {
       display: block;
       margin: 15px auto;
@@ -53,8 +49,8 @@
   <h2>FAMILY GATHERING RM KEMANG</h2>
   <p>Terimakasih Semuanya
     Telah Men-Sukseskan Acara Family Gathering RM Kemang
-    ✨</p
-   <p>Berikut hasil dokumentasi acara kemarin, jika ingin melihat gambar / video full HD tidak pecah-pecah. Harap di Download dulu ya ! 
+    ✨
+    Berikut hasil dokumentasi acara kemarin, jika ingin melihat gambar / video full HD tidak pecah-pecah. Harap di Download dulu ya ! 
    Terimakasih </p>
 
   <a class="link" href="https://drive.google.com/drive/folders/114kNT3t1nnbmb-fcNGjHbuBG2KzZg50F" target="_blank">🎥 VIDEO JADI</a>
