--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
   <p>Terimakasih Semuanya
     Telah Men-Sukseskan Acara Family Gathering RM Kemang
     ✨ </p>    <p> Berikut hasil dokumentasi acara kemarin, 
-    jika ingin melihat gambar / video full HD tidak pecah-pecah. Harap di Download dulu ya ! 
-   Terimakasih </p>
+    jika ingin melihat gambar / video full HD tidak pecah-pecah. Harap di download dulu ya ! 
+   Terimakasih. </p>
 
   <a class="link" href="https://drive.google.com/drive/folders/114kNT3t1nnbmb-fcNGjHbuBG2KzZg50F" target="_blank">🎥 VIDEO JADI</a>
   <a class="link" href="https://drive.google.com/drive/folders/1xtipNH8S6Iw63Aapu_mRj0g8pgWhL838" target="_blank">📷 FOTO BERSAMA</a>
